java/java-tests/testData/codeInsight/daemonCodeAnalyzer/unnamedClass/MainWithNonStandardSignature.java
<error descr="Unnamed class contains no 'main' method">public static Integer main() {
  System.out.println("Hello world!");
  return 2;
};</error>